Bug 1053944 - Change RegExp.$N getters to return '' instead of `undefined` for non-matched groups. r=waldo, a=sledru